<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <!--suppress AndroidUnknownAttribute -->
    <data class="by.test.photoapptest.ui.signin.FragmentSigninPageBinding" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingEnd="@dimen/std_margin_extra_huge"
        android:paddingStart="@dimen/std_margin_extra_huge">

        <EditText
            android:id="@+id/login_signin"
            style="@style/TextAppearance.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/std_margin"
            android:hint="@string/login_text"
            android:inputType="text"
            android:text="anton1995" />

        <EditText
            android:id="@+id/password_signin"
            style="@style/TextAppearance.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/std_margin"
            android:hint="@string/password_text"
            android:inputType="textPassword"
            android:text="1q2w3e4r" />

        <Button
            android:id="@+id/signin"
            style="@style/Control.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signin_text" />
    </LinearLayout>

</layout>
